# PluginManager

./: .gitignore  .qmake.conf  CMakeLists.txt  README.md  pluginLoader.pro  pluginManager.pro
.devcontainer/: Dockerfile  devcontainer.json
Apps/: Apps.pro  CMakeLists.txt
Apps/ExampleApp/: CMakeLists.txt  ExampleApp.pro  main.cpp  pluginlist.json
ExampleApp/: ExampleApp.pro  main.cpp  pluginlist.json
Examples/: CMakeLists.txt
Examples/ExampleApp/: main.cpp  pluginlist.json
Examples/Plugins/: CMakeLists.txt
Examples/Plugins/Dummy2GeneratorPlugin/: DummyGenerator.cpp  DummyGeneratorPlugin.h
Examples/Plugins/DummyGeneratorPlugin/: CMakeLists.txt  DummyGenerator.cpp
Examples/Plugins/GeneratorManagerPlugin/: CMakeLists.txt
Examples/Plugins/UniverseAnswerGeneratorPlugin/: CMakeLists.txt  universeanswergeneratorimpl.h  universeanswergeneratorplugin.h
GeneratorManagerPlugin/: GeneratorManagerPlugin.pro  generatormanagerimpl.cpp
PluginManager/: CMakeLists.txt  Dependency.h  IPluginInterface.h  IPluginLib.h  InterfaceId.h  PluginConfigurationParser.cpp  PluginConfigurationParser.h  PluginManager.cpp  PluginManager.h  PluginManager.pro  PluginManagerExceptions.h  PluginUtils.h  StdPluginLib.h  dependency.h  extension.h  interfaceid.h  pluginconfigurationparser.cpp  pluginconfigurationparser.h  pluginmanager.cpp  pluginmanager.h  stdpluginlib.h
PluginManager/Interfaces/: igeneratormanager.h  inumbergenerator.h  iplugininterface.h  ipluginlib.h
PluginManager/Tests/: CMakeCache.txt  CMakeLists.txt  invalidpluginfile.json  noauthor.json  noconfiguration.json  nodescription.json  noplugins.json  notenoughextensions.json  pluginManagerTest.cpp  toomanyextensions.json
Plugins/: CMakeLists.txt  Plugins.pro
Plugins/Dummy2GeneratorPlugin/: CMakeLists.txt  DummyGenerator.h  DummyGeneratorPlugin.cpp
Plugins/DummyGeneratorPlugin/: DummyGeneratorPlugin.cpp  DummyGeneratorPlugin.h
Plugins/GeneratorManagerPlugin/: GeneratorManagerPlugin.pro  generatormanagerimpl.h  generatormanagerplugin.cpp  generatormanagerplugin.h  generatormanagerplugin_global.h
Plugins/UniverseAnswerGeneratorPlugin/: CMakeLists.txt  UniverseAnswerGeneratorPlugin.pro  universeanswergeneratorimpl.cpp  universeanswergeneratorplugin.cpp  universeanswergeneratorplugin.h
Test/: CMakeLists.txt  GTestPluginConfigurationParser.cpp  GTestPluginManager.cpp  invalidpluginfile.pb.txt  notenoughextensions.pb.txt  pluginlist.pb.txt  pluginlist_onlyone.pb.txt  statefulplugintest.pb.txt  toomanyextensions.pb.txt
Test/Plugins/: CMakeLists.txt
Test/Plugins/Dummy2GeneratorPlugin/: CMakeLists.txt  DummyGenerator.cpp  DummyGenerator.h  DummyGeneratorPlugin.cpp  DummyGeneratorPlugin.h
Test/Plugins/DummyGeneratorPlugin/: CMakeLists.txt  DummyGenerator.cpp  DummyGenerator.h  DummyGeneratorPlugin.cpp  DummyGeneratorPlugin.h
Test/Plugins/GeneratorManagerPlugin/: CMakeLists.txt  GeneratorManagerImpl.cpp  GeneratorManagerImpl.h  GeneratorManagerPlugin.cpp  GeneratorManagerPlugin.h
Test/Plugins/Interfaces/: IGeneratorManager.h  INumberGenerator.h  IStatefulPluginInterface.h
Test/Plugins/StatefulTestPlugin/: CMakeLists.txt  StatefulTestClass.cpp  StatefulTestClass.h  StatefulTestPlugin.cpp  StatefulTestPlugin.h
Test/Plugins/UniverseAnswerGeneratorPlugin/: CMakeLists.txt  UniverseAnswerGeneratorImpl.cpp  UniverseAnswerGeneratorImpl.h  UniverseAnswerGeneratorPlugin.cpp  UniverseAnswerGeneratorPlugin.h
UniverseAnswerGeneratorPlugin/: UniverseAnswerGeneratorPlugin.pro  universeAnswergenerator_global.h  universeanswergeneratorplugin.h
cmake/: CreatePlugin.cmake  GoogleTestSetup.cmake
